@@ -8,6 +8,7 @@ Version 1.1.6 to be released
 - Bug #1790: Fixed the bug that CJSON::encode may generate invalid encoding result when data contains float numbers (Qiang)
 - Bug #1799: Fixed the bug that CJuiDatePicker::$name may cause a PHP error (Y!!)
 - Bug #1819: CHttpRequest::getPathInfo() now respects encoded characters (Sam Dark, creocoder)
+- Bug #1858: Fixed the bug that CDbCommandBuilder::createInCondition() doesn't work with composite keys (Qiang)
 - Bug #1864: Fixed a typo in CDbCommandBuilder that disables correct handling of group and having in createCountCommand (Qiang)
 - Bug: Fixed the bug that CActiveForm generates unnecessary js code about setting focus (Qiang)
 - Enh #1785: Added CAssetManager::$excludeFiles property to support exclusion of irrelevant files from the publishing process (Y!!)
